# dotfiles

./: .copier-answers.yml  .editorconfig  .flake8  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .prettierignore  .typos.toml  .yamllint.yml  LICENSE  Makefile  PACKAGES.md  README.md  elpaca-lock.el  install.sh  mypy.ini  package-lock.json  package.json  pylintrc  pyproject.toml  requirements-dev.in  requirements-dev.txt
.github/workflows/: ci.yml
.template_files/: bats  npm_install_deps  npm_update_deps  uv_install_deps  uv_latest_python.py  uv_outdated_deps.py  uv_update_deps  uv_update_deps_internal.py  uv_update_python
core/: bash-aliases.bash  common.bash  dotfiles.el  environment-variables.sh  generic-aliases.bash  logout.sh  zsh-aliases.zsh
core/default-dotfiles/: .gitignore  default-bash-login.bash  default-bashrc.bash  default-emacs.el  default-profile.sh  default-zlogin.zsh  default-zlogout.zsh  default-zprofile.zsh  default-zshenv.zsh  default-zshrc.zsh
core/package-scripts/: common-funcs.sh  inlist.sh  install-packages.sh  load-all-packages-aliases.bash  load-all-packages-env.sh  load-package-env.sh  load-packages-aliases.bash  load-packages-env.sh  load-packages.el  package-common-funcs.sh  packages-common.bash  setup-common.bash  update-package.bash  update-packages.sh
core/stubs/: bash-login.bash  bash-logout.bash  bashrc.bash  profile.sh  zlogin.zsh  zprofile.zsh  zshenv.zsh
core/templates/: bash-login.bash  bash-logout.bash  bashrc.bash  early-init.el  profile.sh  zlogout.zsh  zprofile.zsh  zshrc.zsh
core/zsh-completions/: _dotfiles-package-ignore
home-manager/: default.nix  subordinate-package-manager.nix
misc/: android-terminal-ide.md  cygwin.md  dual-boot.md  linux-extra.md
misc/android-linux/: README.md  create-image.sh
old-packages/02-sudo-umask/: setup.bash
old-packages/04-common-dirs/: README.md  env.sh
old-packages/ag/: setup.bash
old-packages/antigen/: aliases.zsh
old-packages/bazel/: aliases.sh  setup.bash
old-packages/cask/: setup.bash
old-packages/chrome/: setup.bash
old-packages/cinnamon-tweaks/: setup.bash
old-packages/default-shell/: setup.bash
old-packages/dev-tools/: env.sh  setup.bash
old-packages/dir-funcs/: aliases.sh  env.sh
old-packages/dropbox-gui/: setup.bash
old-packages/easy-sshfs/: env.sh
old-packages/emacs/: emacs-daemon.desktop.template  setup.bash
old-packages/emacs-launchers/: aliases.sh
old-packages/emacs-term-integration/: aliases.bash  aliases.sh  aliases.zsh  setup.bash
old-packages/freefilesync/: freefilesync  setup.bash
old-packages/gnucash/: env.sh
old-packages/go/: aliases.sh  env.sh  setup.bash
old-packages/haskell/: env.sh
old-packages/htop/: aliases.sh  env.sh
old-packages/iptables/: env.sh  iptablesload  setup-iptables.sh
old-packages/ldraw/: mlcad  mlcad-desktop-template
old-packages/liquidprompt/: setup.bash
old-packages/notification-email/: setup.bash  ssmtp-conf-template
old-packages/python/: env.sh  lessfilter  setup.bash
old-packages/recycle-bin/: aliases.sh  emacs.el  env.sh
old-packages/redshift/: setup-redshift.sh  setup.bash
old-packages/ruby/: env.sh
old-packages/solarized-dircolors/: aliases.sh  setup.bash
old-packages/solarized-gnome-terminal/: setup.bash
old-packages/ssh-server/: setup-ssh-server.sh
old-packages/syncthing/: setup.bash
tests/: Makefile  bats-runner.sh  check-python-version.sh  find-bats-files.sh  find-python-files.sh  find-shell-files.sh  nixpkgs-version.bats  python-version.bats
tests/core/: bash.bats  (+5 more)
(+25 files in other folders)
