[project]
name = "dotfiles"
version = "0.0.0"
requires-python = "==3.12.3"
dependencies = []

[dependency-groups]
dev = [
  "mypy==1.17.1",
  "pre-commit>=4.3.0",
  "ruff==0.12.12",
  "tombi==0.6.2",
]

[tool.mypy]
scripts_are_modules = true
python_version = "3.12"
strict = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "C90",
  "D",
  "EM",
  "FBT",
  "INP",
  "PLR0912",
  "PLR0913",
  "PLR0915",
  "PT",
  "PTH",
  "PYI025",
  "S",
  "T20",
  "TRY003",
]
